app/globals.css
@import "tailwindcss";
@import "leaflet/dist/leaflet.css";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
  overflow-y: auto;
}

html,
body {
  height: 100%;
}

#__next {
  min-height: 100%;
  overflow: visible;
  transform: none;
  filter: none;
  perspective: none;
}

